--- a/InvigilationApp/InvigilationApp.csproj
+++ b/InvigilationApp/InvigilationApp.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 
 </Project>
