--- a/InvigilationApp/InvigilationApp.csproj
+++ b/InvigilationApp/InvigilationApp.csproj
@@ -7,7 +7,10 @@
   <ItemGroup>
     <Folder Include="uploads\" />
     <Folder Include="Services\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WindowsAzure.Storage" Version="7.2.1" />
   </ItemGroup>
 
 
