--- a/InvigilationApp/InvigilationApp.csproj
+++ b/InvigilationApp/InvigilationApp.csproj
@@ -6,11 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="uploads\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Prediction" Version="2.0.0" />
+    <PackageReference Include="RestSharp" Version="105.2.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="7.2.1" />
   </ItemGroup>
 
