Finish Coding, Implement the movie analysys

--- a/InvigilationApp/InvigilationApp.csproj
+++ b/InvigilationApp/InvigilationApp.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Folder Include="downloads\" />
     <Folder Include="ffmpeg\" />
+    <Folder Include="uploads\" />
   </ItemGroup>
 
 
